Though we assume the latter, resourceful lobsters show us how ants can be camels.

--- a/Brackets/brackets_theme_tomorrow.less
+++ b/Brackets/brackets_theme_tomorrow.less
@@ -102,9 +102,9 @@
 @accent-plus: @green;
 
 /* inline editor colors */
-@inline-background-color-1: lighten(@background, @bc-color-step-size);
-@inline-background-color-2: lighten(@background, @bc-color-step-size*2);
-@inline-background-color-3: lighten(@background, @bc-color-step-size*3);
+@inline-background-color-1: darken(@background, @bc-color-step-size);
+@inline-background-color-2: darken(@background, @bc-color-step-size*3);
+@inline-background-color-3: rgba(0,0,0,0);
 
 @inline-color-1: darken(@foreground, @bc-color-step-size*2);
 @inline-color-2: darken(@foreground, @bc-color-step-size);
